--- a/style-conference/assets/css/main.css
+++ b/style-conference/assets/css/main.css
@@ -4,7 +4,6 @@ Grid
 ===============================
 */
 
-
 .container{
     margin: 0 auto;
     padding-left: 30px;
@@ -48,3 +47,63 @@ Home
 .hero{
     padding:22px 80px 66px 80px;
 }
+.group:before,
+.group:after {
+    content:"";
+    display: table;
+}
+.group:after {
+    clear: both;
+}
+.group {
+    clear: both;
+    *zoom: 1;
+}
+.logo {
+    border-top: 4px solid #d7dae2;
+    float: left;
+    margin-top: 4px;
+    padding-top: .5em;
+    padding-right: 1em;
+}
+/*
+================================
+Primary Footer
+===============================
+*/
+.primary-footer {
+    padding-bottom: 44px;
+    padding-top: 44px;
+}
+.primary-footer small {
+    float: left;
+    font-weight: 400;
+}
+.col-1-3 {
+    width: 33.33%;
+}
+.col-2-3 {
+    width:66.66%
+}
+.col-1-3,
+.col-2-3 {
+    display: inline-block;
+    vertical-align: top;
+}
+.grid,
+.col-1-3,
+.col-2-3 {
+    padding-left: 15px;
+    padding-right:15px;
+}
+.container,
+.grid {
+    margin:0 auto;
+    width: 960 px;
+}
+.container {
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
+
