--- a/style-conference/assets/css/main.css
+++ b/style-conference/assets/css/main.css
@@ -1,6 +1,6 @@
 body {
     background-color: #11073fe3;
-    color: rgb (39, 50, 110)
+    color: rgb(39, 50, 110);
     font: 300 16px/22px "Lato", "Open Sans", "Helvetica Neue", Helveltica, Arial, sans-serif;
 }
 /*
@@ -8,57 +8,44 @@ body {
 Grid
 ===============================
 */
-
-.container{
-    margin: 0 auto;
-    padding-left: 30px;
-    padding-right: 30px;
-    width: 960px;
-}
 *,
 *:before,
 *:after {
     -webkit-box-sizing: border-box;
        -moz-box-sizing: border-box;
             box-sizing: border-box;
+        }
+        .col-1-3 {
+            width: 33.33%;
+        }
+        .col-2-3 {
+            width:66.66%
+        }
+        .col-1-3,
+        .col-2-3 {
+            display: inline-block;
+            vertical-align: top;
+        }
+        .grid,
+        .col-1-3,
+        .col-2-3 {
+            padding-left: 15px;
+            padding-right:15px;
+        }
+        .container,
+        .grid {
+            margin:0 auto;
+            width: 960 px;
+        }
+        .container {
+            padding-left: 30px;
+            padding-right: 30px;
+        }
 /*
 ====================================
-Typography
+Clearfix
 ====================================
 */
-}
-h1, h3, h4, h5, p{
-    margin-bottom: 22px;
-}
-/*
-====================================
-Buttons
-====================================
-*/
-.btn {
-    border-radius: 5px;
-    display: inline-block;
-    margin: 0;
-}
-.btn-alt {
-    border:1 px solid #fff;
-    padding: 10 px 30px;
-}
-/*
-====================================
-Home
-====================================
-*/
-.hero{
-    line-height: 44px;
-    padding:22px 80px 66px 80px;
-}
-.hero h2{
-    font-size: 36px;
-}
-.hero p{
-    font-size: 24px;
-}
 .group:before,
 .group:after {
     content:"";
@@ -71,14 +58,22 @@ Home
     clear: both;
     *zoom: 1;
 }
-.logo {
-    border-top: 4px solid #d7dae2;
-    float: left;
-    margin-top: 4px;
-    padding-top: .5em;
-    padding-right: 1em;
-}
+/*
+====================================
+Rows
+====================================
+*/
 
+
+/*
+====================================
+Typography
+====================================
+*/
+}
+h1, h3, h4, h5, p{
+    margin-bottom: 22px;
+}
 h1, h2, h3, h4 {
     color: #6c89db;
 }
@@ -101,10 +96,68 @@ h5{
     font-size: 14px;
     font-weight: 400;
 }
+strong {
+    font-weight: 400;
+}
+cite,
+em{
+    font-style: italic;
+}
 /*
-================================
+====================================
+Leads
+====================================
+*/
+
+/*
+====================================
+Links
+====================================
+*/
+a {
+    color: #6c89db;
+}
+a:hover {
+    color: #a9b2b9;
+}
+/*
+====================================
+Buttons
+====================================
+*/
+.btn {
+    border-radius: 5px;
+    display: inline-block;
+    margin: 0;
+}
+.btn-alt {
+    border: 1px solid #fff;
+    padding: 10px 30px;
+}
+
+/*
+====================================
+Primary Header
+====================================
+*/
+.logo {
+    border-top: 4px solid #d7dae2;
+    float: left;
+    margin-top: 4px;
+    padding-top: .5em;
+    padding-right: 1em;
+}
+.tagline {
+    margin: 66px 0 22px 0;
+}
+.primary-nav {
+    font-size: 14px;
+    font-weight: 400;
+}
+/*
+====================================
 Primary Footer
-===============================
+====================================
 */
 .primary-footer {
     color: #6c89db;
@@ -116,54 +169,50 @@ Primary Footer
     float: left;
     font-weight: 400;
 }
-.col-1-3 {
-    width: 33.33%;
-}
-.col-2-3 {
-    width:66.66%
-}
-.col-1-3,
-.col-2-3 {
-    display: inline-block;
-    vertical-align: top;
-}
-.grid,
-.col-1-3,
-.col-2-3 {
-    padding-left: 15px;
-    padding-right:15px;
-}
-.container,
-.grid {
-    margin:0 auto;
-    width: 960 px;
-}
-.container {
-    padding-left: 30px;
-    padding-right: 30px;
-}
+/*
+====================================
+Navigation
+====================================
+*/
 
-
-strong {
-    font-weight: 400;
+/*
+====================================
+Home
+====================================
+*/
+.hero{
+    line-height: 44px;
+    padding:22px 80px 66px 80px;
 }
-cite,
-em{
-    font-style: italic;
+.hero h2{
+    font-size: 36px;
 }
-a {
-    color: #6c89db;
-}
-a:hover {
-    color: #a9b2b9;
-}
-.tagline {
-    margin: 66px 0 22px 0;
-}
-.primary-nav {
-    font-size: 14px;
-    font-weight: 400;
+.hero p{
+    font-size: 24px;
 }
 .teaser a:hover h3 {
     color: #a9b2b9;
 }
+/*
+====================================
+Speakers
+====================================
+*/
+
+/*
+====================================
+Schedule
+====================================
+*/
+
+/*
+====================================
+Venue
+====================================
+*/
+
+/*
+====================================
+Register
+====================================
+*/
