--- a/style-conference/assets/css/main.css
+++ b/style-conference/assets/css/main.css
@@ -19,7 +19,7 @@ Grid
             width: 33.33%;
         }
         .col-2-3 {
-            width:66.66%
+            width:66.66%;
         }
         .col-1-3,
         .col-2-3 {
@@ -176,7 +176,7 @@ Buttons
 }
 .btn-alt:hover {
     background: #fff;
-    color: #688cc9;
+    color: #668cc9;
   }  
   .btn-default {
     border: 0;
@@ -201,6 +201,7 @@ Primary Header
 }
 .tagline {
     margin: 66px 0 22px 0;
+    text-align: right;
 }
 .primary-nav {
     font-size: 14px;
@@ -258,6 +259,7 @@ Home
 }
 .hero p{
     font-size: 24px;
+    font-weight: 100;
 }
 .teaser a:hover h3 {
     color: #a9b2b9;
@@ -357,6 +359,15 @@ table h4 {
 Venue
 ====================================
 */
+.venue-theatre {
+    margin-bottom: 66px;
+}
+.venue-hotel {
+    margin-bottom: 66px;
+}
+.venue-map {
+    height: 264px;
+}
 
 /*
 ====================================
