--- a/transitions2/styles.css
+++ b/transitions2/styles.css
@@ -42,18 +42,21 @@
     transform: translate(-50%, -50%);
 }
 
-#move:hover~#block1 {
+#block1.move {
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%)
+    transform: translate(-50%,-50%);
 }
-#size:hover~#block1 {
+
+#block1.size {
     width: 20%;
     height: 20%;
 }
-#opacity:hover~#block1 {
+
+#block1.opacity {
     opacity: .25;
 }
-#color:hover~#block1 {
+
+#block1.color {
     background-color: green;
 }
