--- a/Interface-online-courses/css/standard.css
+++ b/Interface-online-courses/css/standard.css
@@ -60,12 +60,12 @@ header {
 h1, h2, h3, h4, h5, h6 {
     font-family: Quicksand, sans-serif;
     text-align: center;
-    text-size 3 rem;
+    font-size: 3rem;
 
 }
 
 h1 {
-    text-size: 3rem;
+    font-size: 3rem;
 }
 h2 {
     font-size: 2.5rem;
@@ -91,8 +91,9 @@ h2 {
     opacity: .8;
 }
 .slideshow-images > img {
-    postion: absolute;
+    position: absolute;
     top: 0;
+    left: 0;
     opacity:0;
     width: 100%;
     height: 100%;
@@ -143,5 +144,5 @@ header > content {
     top: 50%;
     left: 0;
     width: 100%;
-    transform: translate(-50%);
+    transform: translateY(-50%);
 }
