--- a/Interface-online-courses/css/standard.css
+++ b/Interface-online-courses/css/standard.css
@@ -139,10 +139,61 @@ h2 {
     }
 }
 
-header > content {
+header > .content {
     position: absolute;
     top: 50%;
     left: 0;
     width: 100%;
     transform: translateY(-50%);
 }
+
+h3 {
+    font-size: 2rem;
+    margin-top: .7rem;
+    margin-bottom: .7rem;
+}
+
+article {
+    position: relative;
+}
+
+article::before {
+    content: "";
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    opacity: .1;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
+
+#intro {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    padding-left: 10vw;
+    padding-right: 10vw;
+    font-size: 1.2rem;
+    display: flex;
+    justify-content: space-around;
+    align-items: stretch;
+}
+ .side1, .side2 {
+     background-color: white;
+     box-sizing: border-box;
+     min-width: 35%;
+     max-width: 35%;
+     font-size: .8em;
+     padding: 1 em;
+ }
+
+ .icon {
+     height: 1.5em;
+ }
+
+ #intro::before {
+     background-image: url(images/coding.png);
+ }
