--- a/Interface-online-courses/css/standard.css
+++ b/Interface-online-courses/css/standard.css
@@ -165,7 +165,7 @@ article::before {
     opacity: .1;
     position: absolute;
     top: 0;
-    bottom: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     z-index: -1;
