--- a/Interface-online-courses/css/mobile.css
+++ b/Interface-online-courses/css/mobile.css
@@ -48,3 +48,9 @@ header {
     max-width: 80vw;
     margin-bottom: 2em;
 }
+
+.box {
+    padding-right: 5vw;
+    padding-left: 5vw;
+    margin: 0;
+}
