--- a/Interface-online-courses/css/standard.css
+++ b/Interface-online-courses/css/standard.css
@@ -197,3 +197,44 @@ article::before {
  #intro::before {
      background-image: url(images/coding.png);
  }
+
+ article > h2 {
+     background-color: 0000060;
+     color: white;
+     margin: 0;
+     padding-top: 1em;
+     padding-bottom: 1em;
+}
+
+footer {
+    background-color: transparent;
+    padding: 1em;
+    margin: 1em 10vw .5em 10vw;
+    font-size: 0.8em;
+}
+
+#course::before {
+    background-repeat: url(images/computer-class.jpg);
+    background-position: center top;
+}
+
+#about::before {
+    background-image: url("images/kent-teaching.jpg");
+    background-position: center top;
+}
+
+.box {
+    padding-left: 10vw;
+    padding-right: 10vw;
+    margin-left: 7vw;
+    margin-right: 7vw;
+    background-color: white;
+}
+
+dt {
+    font-weight: bold;
+}
+
+dd {
+    margin-bottom: 1em;
+}
