--- a/Class_11_Example/css/standard.css
+++ b/Class_11_Example/css/standard.css
@@ -50,7 +50,7 @@ header > span {
      position: absolute;
      left:50%;
      top: 50%;
-     transform: translate(-50%,-50%);
+     transform: translate(-50%, calc(-50% + 2em));
      white-space: nowrap;
      text-align: center;
  }
@@ -76,4 +76,42 @@ header > span {
      padding-bottom: calc(.5em + 3px);
      width: calc(20ch + 5px);
      background: linear-gradient(90deg, blue, lightblue, turquoise);
+ }
+
+ .teaser {
+    position: absolute;
+    top: 100vh;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    color: black;
+    display: flex;
+    width: 80%;
+
+ }
+
+ .teaser > div {
+     padding-right: 3em;
+     padding-left: 3em;
+     position: relative;
+ }
+
+ .teaser > div:last-child::after {
+     border-right: 0;
+ }
+
+ .teaser > div::after {
+     border-right: 1px solid #404040;
+     content: "";
+     position: absolute;
+     width: 100%;
+     height: 70%;
+     left: 0;
+     top: 15%;
+ }
+
+ .teaser > div > h2 > i {
+     font-size: .8em;
+     color: turquoise;
+     margin-right: 0.25em;
  }
