--- a/Interface-online-courses/css/mobile.css
+++ b/Interface-online-courses/css/mobile.css
@@ -37,7 +37,7 @@ header {
     margin-top: 0;
 }
 
-#intro {
+#intro, .boxes {
     flex-direction: column;
     min-height: 50vh;
     box-sizing: border-box;
