--- a/Interface-online-courses/css/standard.css
+++ b/Interface-online-courses/css/standard.css
@@ -14,6 +14,7 @@ body {
 nav {
     background-color: #000060;
     position: fixed;
+    text-align: center;
     top: 0;
     left: 0;
     width: 100%;
@@ -60,8 +61,6 @@ header {
 h1, h2, h3, h4, h5, h6 {
     font-family: Quicksand, sans-serif;
     text-align: center;
-    font-size: 3rem;
-
 }
 
 h1 {
@@ -81,7 +80,7 @@ h2 {
 }
 
 .slideshow-images::after {
-    Content: "";
+    content: "";
     position: absolute;
     left: 0;
     top: 0;
@@ -171,7 +170,7 @@ article::before {
     z-index: -1;
 }
 
-#intro {
+#intro, .boxes {
     padding-top: 2rem;
     padding-bottom: 2rem;
     padding-left: 10vw;
@@ -187,7 +186,7 @@ article::before {
      min-width: 35%;
      max-width: 35%;
      font-size: .8em;
-     padding: 1 em;
+     padding: 1em;
  }
 
  .icon {
@@ -199,7 +198,7 @@ article::before {
  }
 
  article > h2 {
-     background-color: 0000060;
+     background-color: #000060;
      color: white;
      margin: 0;
      padding-top: 1em;
@@ -213,7 +212,7 @@ footer {
     font-size: 0.8em;
 }
 
-#course::before {
+#courses::before {
     background-repeat: url(images/computer-class.jpg);
     background-position: center top;
 }
