--- a/Class11_mobile /css/mobile.css
+++ b/Class11_mobile /css/mobile.css
@@ -1,14 +1,62 @@
 #menu {
     display: block;
     position: fixed;
-    top: 6vh;
-    right: 2em;
+    font-size: 2em;
+    padding-top: 25px;
+    right: .7em;
 }
-html, body {
-    font-size: 12px;
+.menu-show {
+    height: auto;
+    width: auto;
 }
+#fancy {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding-left: .5em;
+    padding-top: .3em;
+    font-size: 1.5em;
+    
+}
+
 nav {
-    display: none;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    width: 0;
+    height: 0;
+    right: 90%;
+    margin-left: 22em;
+    background-color: #303030;
+    padding: 1em;
 }
 
 
+#home {
+    font-size: 15px;
+}
+
+.teaser {
+    display: flex;
+    flex-direction: column;
+    font-size: 1.7em;
+    margin-top: 350px;
+}
+
+
+main a {
+    padding-top: calc(.5em + 3px);
+    padding-bottom: calc(.5em + 3px);
+    width: calc(20ch + 5px);
+    background: linear-gradient(90deg, blue, lightblue, turquoise);
+    border-width: 0;
+    text-shadow: 1px 1px #303030;
+}
+
+main h1 {
+    width: 35ch;
+}
+i::click {
+    display: flex;
+    flex-direction: column;
+}
