--- a/Class11_mobile /css/standard.css
+++ b/Class11_mobile /css/standard.css
@@ -54,6 +54,9 @@ header > span {
      white-space: nowrap;
      text-align: center;
  }
+ main h1 {
+     width: 35ch;
+ }
 
  main a {
      font-size: 1rem;
