--- a/chipotle/css/standard.css
+++ b/chipotle/css/standard.css
@@ -1,106 +1,136 @@
-body {
-    background-image: url("../images/hw-background.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
+html, body {
     margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
-}
-#topbar {
-    background-color: white;
-    text-align: right;
-    padding-top: 15px;
-    font-size: 12px;
-    position: flex;
-    justify-content: space-evenly;
-}
-
-#topbar a {
-
-    text-decoration: none;
-    color: brown;
-    text-align: right;
-    padding-top: 15px;
-    font-size: 12px;
-    padding-right: 5em;
-
-}
-nav {
-    height: 3em;
-    text-transform: uppercase;
-    background-color: white;
-    display: flex;
-    justify-content: space-between;
-    font-size: 1em;
-    
-}
-nav a {
-    color: brown;
-    text-decoration: none;
-    padding-top: 4vh;
-    font-size: 13px;
-    padding-left: 50px;
-}
-
-#likeit {
+    font-size: 1.8vh;
+    font-family: 'Work-sans', 'sans-serif';
     color: white;
-    height: 100%;
-    position: absolute;
-    left: 20%;
-    top: 36%;
-    text-transform: uppercase;
+}
+
+#home {
+    background-image: url("../images/hw-background.jpg");
+    background-size: cover;
     width: 100%;
-    font-size: 2em;
-}
-
-#likeit2 {
-    color: white;
     height: 100%;
-    text-transform: uppercase;
-    left: 23%;
-    top: 47%;
-    width: 100%;
-    position: absolute;
-    font-size: 1.3em;
-
-}
-h2:after {
-    
 }
 
-img {
+header {
     position: fixed;
     top: 0;
-    padding-left: 10em;
+    left: 0;
+    width: 100%;
+    height: 10vh;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    z-index: 2;
+}
+
+.logo {
     height: 13vh;
 }
 
- #appad {
-    width: 100%;
-    height: 3vh;
-    padding-top: 2.3vh;
-    background-color: #654321;
-    text-transform: uppercase;
-    color: white;
+nav {
     display: flex;
-    justify-content: center;
-    align-items: center;
- }
+    align-items: flex-end;
+}
 
- button {
-     background-color: lightgrey;
-     color: black;
-     height: 3.1vh;
-     top: 50%;
-     width: 6em;
-     position: relative;
-     padding-bottom: 10px;
-     text-transform: uppercase;
-     padding-right: 0;
-     padding-left: 0;
- }
- button a {
-    
- }
+nav a {
+    margin-right: 2ch;
+    margin-bottom: .5em;
+    text-decoration: none;
+    text-transform: uppercase;
+    color: #543a2d;
+}
 
- 
+#options {
+    display: flex;
+    flex-direction: column;
+    margin-left: 3vw;
+    margin-bottom: .5em;
+    text-align: right;
+}
 
+#options span {
+    white-space: nowrap;
+}
+
+#options span:nth-of-type(1) {
+    margin-bottom: .5em;
+    text-decoration: underline;
+}
+
+#options span:nth-of-type(2) a{
+    margin-right: .5ch;
+    color: #543a2d;
+    background-color:  #d2d2ca;
+    margin-right: .5ch;
+    margin-top: 1em;
+    margin-bottom: -10px;
+    padding: .5em;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
+
+#options span:nth-child(3) {
+    margin-left: 2.5ch;
+    margin-right: 1ch;
+}
+#subheader {
+    top: 10%;
+    width: 100%;
+    position: fixed;
+    text-align: center;
+    color: white;
+    background-color: #543a2d;
+    padding: .7em;
+}
+
+#subheader i {
+    align-content: center;
+    margin-bottom: .1em;
+    margin-left: .2em;
+    font-size: 1em;
+    color: white;
+}
+
+main {
+    font: 'Work-sans' 'Sans-serif';
+    position: absolute;
+    top: 40%;
+    left: 10%;
+    text-align: center;
+    white-space: nowrap;
+    text-transform: uppercase;
+    font-size: 3.3em;
+    line-height: 0;
+}
+
+
+main i {
+    color: white;
+    font-size: .5em;
+    padding-left: .5em;
+}
+
+.page-right {
+    position: relative;
+    top: 50%;
+    left: 97%;
+    font-size: 5vh;
+    width: 7vh;
+    height: 7vh;
+    border-radius: 3.5vh;
+    background-color:  rgba(255,255,255,0.8);
+    color: #543a2d;
+    text-align: center;
+    line-height: 7vh;
+    vertical-align: middle;
+    padding-right: .3em;
+}
+
+.page-right i {
+
+    line-height: 7vh;
+    vertical-align: middle;
+    padding-right: .3em;
+}
