--- a/orange-cat-final/css/mobile.css
+++ b/orange-cat-final/css/mobile.css
@@ -1,12 +1,29 @@
 body {
+    position: relative;
+    font-size: 11px;
+    max-width: 100%;
+    max-height: 100%;
+    margin-top: 0;
+}
+
+#home{
     background-image: url('../images/kitten-v.jpg');
     background-size: cover;
     background-repeat: no-repeat;
-    background-attachment: fixed;
+    background-position:center;
+    position: relative;
     font-size: 11px;
     max-width: 100%;
-    
 }
+
+#about {
+    background-image: url('../images/kitten-flying-v.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    max-width: 100%;
+}
+
 #orange-header {
     display: flex;
     justify-content: flex-start;
@@ -25,7 +42,7 @@ nav {
 }
 nav button {
     font-family: 'Montserrat';
-    font-size: 15px;
+    font-size: 17px;
     text-decoration: none;
     color: orange;
     padding: 2px;
@@ -42,7 +59,7 @@ nav button {
 }
 nav a {
     font-family: 'Montserrat';
-    font-size: 15px;
+    font-size: 17px;
     text-decoration: none;
     color: orange;
     padding: 2px;
@@ -58,19 +75,21 @@ nav a {
     margin-bottom: 2vh;
 }
 
-#onlyon {
-    
-    font-size: 1.6em;
-    position: relative;
-    margin-left: 1em;
-    margin-top: 6vh;
-}
-#netflixpic {
-    top: 12%;
-    left: 20%;
+.onlyon {
+    position: sticky;
+    font-size: 2em;
     margin-left: .5em;
+    margin-top: 6vh;
+    margin-right: 2em;
+    width: 100%;
+}
+
+#netflixpic {
+    top: 15%;
+    left: 25%;
     height: 3vh;
-    width: 4em;
+    width: 2em;
+    margin-left: 5em;
 }
 
 table {
@@ -93,6 +112,45 @@ table {
 tr {
     margin: 2em;
 }
+
 td {
     margin: 3em;
+}
+
+#aboutsillycat {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+#kittendesc {
+    margin-left: none;
+    margin-right: 1em;
+    height: 100px;
+    width: 90%;
+}
+#kittendesc h1 {
+    font-family: 'Montserrat';
+    font-weight: 500;
+    font-size: 1.8em;
+    text-shadow: 1px .5px  white;
+}
+#callus {
+    position: absolute;
+    left: 30%;
+    top: 43%;
+    background-color: black;
+    opacity: .7;
+    color: orange;
+    padding: 2em;
+    border: 3px solid orange;
+    border-radius: 1em;
+    border-collapse: separate;
+    border-spacing: 0px;
+    width: 15em;
+    height: 15vh;
+    animation-timing-function: ease;
+    animation-duration: 4s;
+    animation-iteration-count: 1;
+    transform-origin: bottom;
 }
